--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,7 +17,7 @@ body {
 /* -----------------------------------header */
 
 .header {
-  padding: 15px;
+  padding: 20px;
   background-color: #2196f3;
   display: flex;
   gap: 15px;
@@ -42,6 +42,9 @@ body {
   align-items: center;
 }
 
+/* -------------------------------------main */
+
 .main {
-  background-color: yellow;
+  padding: 16px;
+  background-color: #ab003c;
 }
