--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -40,11 +40,20 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  flex: 1;
 }
 
 /* -------------------------------------main */
 
 .main {
   padding: 16px;
-  background-color: #ab003c;
+  background-color: lightgray;
+}
+
+.start-menu, .game-over {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
